# fluence

./: .gitignore
backend/: .dockerignore  .env.example  .env.production  Dockerfile  pyproject.toml
backend/src/agents/: graph.py  output_structures.py  state.py
backend/src/agents/nodes/: node_audio_summary.py  node_mindmap.py  node_quiz.py  node_recommendation.py  node_summarise.py
backend/src/api/routes/: workflow.py
backend/src/services/: agent_workflow.py
frontend/: .env.example  package.json
frontend/.github/: copilot-instructions.md
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/actions/: user-sync.ts
frontend/src/app/learn/: page.tsx
frontend/src/app/learn/[id]/: page.tsx
frontend/src/app/learn/[id]/_components/: audio-overview.tsx  (+5 more)
frontend/src/app/learn/_components/: CreateSpaceButton.tsx  LearningSpacesList.tsx  LearningSpacesManager.tsx  StudentProfileDialog.tsx  StudentProfileHandler.tsx
frontend/src/app/learn/actions/: learning-space.ts  student-profile.ts
frontend/src/app/profile/: page.tsx
frontend/src/app/profile/_components/: ProfileForm.tsx  ProfileSummary.tsx
frontend/src/components/: LandingPage.tsx  Navbar.tsx  RoleSelector.tsx  StudentProfileDialog.tsx  UserSyncWrapper.tsx
frontend/src/components/ui/: card.tsx
frontend/src/utils/supabase/: middleware.ts
training/: mindmap.ipynb  multi-modal.ipynb  output-parsing.ipynb  parallel-llm-graph.ipynb  podcast.ipynb  pyproject.toml  quiz.ipynb  recommendation.ipynb  summary-notes.ipynb  supabase-python.ipynb  training-agent.ipynb
(+2 files in other folders)
